employee-ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-ui
  namespace: employee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employee-ui
  template:
    metadata:
      labels:
        app: employee-ui
    spec:
      containers:
      - name: employee-ui
        image: sothy/employee-ui:uat-3
        ports:
        - containerPort: 4200
