employee-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-ui-service
  namespace: employee
spec:
  selector:
    app: employee-ui
  ports:
  - port: 4200
    targetPort: 4200
